k8s/digitalocean/worker-pool-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: symphony-worker
  namespace: symphony
spec:
  template:
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: symphony-ha
