k8s/digitalocean/private-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: symphony-orchestrator-public
  namespace: symphony
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symphony-orchestrator
  namespace: symphony
$patch: delete
